--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -99,76 +99,17 @@
 		<p>Os principais eletrodomésticos são:</p>
 		<div class="recuo">
 			<p>• Alexa (Inteligência Artificial da Amazon)</p>
-				<p>• Aquecedor a óleo em todos os ambientes </p>
-					<p>• Cafeteira Nespresso</p>
-<p>• Espremedor elétrico de frutas</p>
-<p>• Liquidificador</p>
-<p>• Lareira a gás</p>
-<p>• Um forno elétrico e outro a gás</p>
-<p>• Máquina de secar roupa</p>
-<p>• Micro-ondas</p>
-<p>• TV Smart Samsung 45"</p>
-<p>• Secador de cabelo</p>
-</div>
-<p>
-A lista completa de itens pode ser encontrada <a href="https://docs.google.com/spreadsheets/d/1u6WD8f-Hd52ZmOtpm-JdsHmHLaLAne5CAmqMuhZ9X3o/edit?usp=sharing">aqui</a>.
-</p>
-
-<h1>Supermercados</h1>
-Supercampos: pequeno supermercado que fica entre o Capivari e o Aroeira32. É o mais próximo e possui o básico. Está localizado na Av. Emílio Lang Júnior, 1245 - Recanto Feliz, Campos do Jordão - SP, 12460-000
-Pão de Açucar: o melhor de Campos. Fica na Av. Dr. Januário Miraglia, 1772, bairro Abernéssia.
-Roma: fica na mesma avenida do Pão de Açucar, um pouco mais próximo do Capivari.
-Guia Turístico de Campos do Jordão
-5 experiências incríveis para fazer em Campos do Jordão, de labirinto gigante a picnic cervejeiro: https://www.guiacampos.com/de-labirinto-gigante-a-picnic-cervejeiro-5-experiencias-para-fazer-com-sua-mae-em-campos-do-jordao/
-O que fazer em Campos do Jordão a noite! 5 dicas e mais uma extra!: https://www.guiacampos.com/o-que-fazer-em-campos-do-jordao-a-noite-5-dicas-e-mais-uma-extra/
-Guia completo: https://www.guiacampos.com/
-
-<h1>Restaurantes</h1>
-Talvez esta seja a melhor parte de Campos do Jordão. São muitos os restaurantes bons, de todos os tipos e para todos os bolsos, desde os mais simples com comida caseira até os de alta gastronomia. Nos finais de semana do inverno, é aconselhável fazer reserva. Abaixo selecionamos alguns que costumamos frequentar. 
-La Gália: localizado no Capivari, possui ambiente acolhedor e aconchegante com carnes exóticas e cardápio variado. Site: http://www.lagalia.com.br/
-Ristorante Festival della Pasta: localizado no Capivari, é especializado em comida Italiana.  Possui no cardápio a possibilidade de degustação de cinco tipos diferentes de massas e com trio de sobremesa. Site: https://www.festivaldellapasta.com.br/
-Choperia Baden Baden: não é propriamente um restaurante, mas é um ótimo local para um tira-gosto sem compromisso durante o dia. Experimente as famosas salsichas alemãs (ou joelho de porco) e observe as pessoas indo e vindo. Site: https://www.instagram.com/badenbadenchoperia/
-
-<h1>Restaurantes Fora do Eixo</h1>
-Restaurantes fora movimentado Capivari que possuem bons cardápios.
-2858 Avenue Bistrô: cozinha moderna em um ambiente descontraído e tranquilo. Site: https://www.instagram.com/2858avenuebistro/?utm_medium=copy_link
-Arte da Pizza: localizada no Grande Hotel de Campos do Jordão esta pizzaria possui mesas próximas aos fornos à lenha. O cardápio é bastante original. Site: https://grandehotelsenac.com.br/ghj_gastronomia/arte-da-pizza/
-Café Terraço Restaurante e Pizzaria: localizada fora da cidade às margens de um lago esta é uma das melhores pizzarias de Campos do Jordão. Site: https://www.instagram.com/cafeterracocamposdojordao/
-ART BBQ: com decoração texana e especializado em carnes defumadas este restaurante possui show ao vivo aos finais de semana. Site: https://www.artbbq.com.br/
-Restaurante Prato da Floresta: localizado no Horto Florestal, você terá a chance de contemplar a exuberante natureza do local degustando pratos típicos da culinária regional. Site: https://www.instagram.com/pf_pratodafloresta/
-Bonanza Grill: Localizado a uma altitude de 1.633m, um dos pontos mais altos da Serra, a vista panorâmica do Bonanza Grill é um atrativo a parte. Vale a pena um drink durante o pôr do sol. Site: https://www.instagram.com/bonanzagrillcj/
-
-<h1>Alta Gastronomia</h1>
-Restaurante Libertango: especializado em carnes, este restaurante argentino com culinária tradicional é uma das melhores opções para degustar uma parrilla. Site: https://libertango.com.br/
-Alquimia: este restaurante vegano é considerado um dos melhores do Brasil. Site: https://restaurantealquimia.com.br/
-Restaurante Pontremoli: é um pequeno bistrô italiano com decoração aconchegante e mesas à beira da lareira e iluminadas a luz de velas. Atendimento somente com reserva. Site: https://restaurantepontremoli.com.br/
-L'Osteria Villa Casato: considerado um dos melhores restaurantes românticos do mundo. A cozinha é baseada na culinária Italiana contemporânea. Site: https://losteriavillacasato.com.br/
-Restaurante Entre Vilas: localizado a 24 km do Aroeira32 no meio da mata este restaurante rústico possui uma das melhores cozinhas de Campos do Jordão. O cardápio é servido em seis etapas com o conceito de slow food. É possível passear pela vinícola e pelas plantações de árvores frutíferas do local. Site: https://www.entrevilas.com.br/
-
-<h1>Cervejarias</h1>
-Cervejaria Baden Baden: uma das cervejarias artesanais mais famosas do país. É possível apreciar a cerveja na própria fábrica ou na choperia que fica no Capivari. A fábrica possui visita guiada, com degustação, que dura aproximadamente 1 h. É necessário comprar ingressos com antecedência pelo site: https://www.badenbaden.com.br/tour-informacoes-gerais/
-Caras de Malte: é um restaurante e microcervejaria localizada apenas a 1,7 km do Aroeira32. É uma ótima opção caso queira fugir do burburinho do Capivari. Site: https://www.carasdemalte.com.br/
-Parque da Cerveja: durante a visita guiada é apresentada cada etapa do processo de produção, proporcionando experiências sensoriais e degustações exclusivas. Há um mirante com uma vista incrível do vale. Site: https://cervejacamposdojordao.com.br/parque/ 
-
-<h1>Fábricas de Chocolate</h1>
-Campos do Jordão possui várias fábricas de chocolate. Destacamos algumas:
-Fábrica de chocolate Araucária: http://www.chocolatearaucaria.com.br/site/home/
-Cacau Show: cadeia brasileira de chocolatarias com bomboniere, cafés seletos e doces finos em mesinhas, balcão ou embalados. Endereço: Av. Frei Orestes Girardi, 3527 - Jardim Atalaia.
-Chocolate Spinassi: de fácil acesso, pois está localizada entre o Capivari e o Aroeira32. Site: https://www.spinassichocolate.com.br/
-Chocolate Montanhês: possui uma loja no Capivari. Site: https://chocolatemontanhes.com.br/
-
-<h1>Passeios Culturais</h1>
-Palácio Boa Vista: é a residência oficial de inverno do governador do Estado de São Paulo. O palácio contém uma rica coleção de obras de arte, móveis antigos e objetos históricos. Passeio imperdível. Site: https://www.saopaulo.sp.gov.br/palacioboavista/#/home
-Museu Felícia Leirner e Auditório Claudio Santoro: localizados em uma área de mata com 35 mil m², o museu reúne um conjunto de 86 obras de bronze, cimento branco, granito e gesso da artista Felícia Leirner, distribuídas ao ar livre, no jardim do espaço que divide com o Auditório Claudio Santoro. O auditório é uma obra-prima da arquitetura e um espaço cultural privilegiado que conta com 814 assentos. Ele é a sede do Festival Internacional de Inverno de Campos do Jordão. A programação pode ser acessada no site: https://www.museufelicialeirner.org.br/
-Dica: o museu e o auditório ficam próximos do palácio. Aproveite e faça os dois em sequência.
-
-<h1>Parque Capivari</h1>
-Centro turístico de Campos do Jordão. Possui muitas lojas, restaurantes e vida noturna. Ótimo lugar para ver e ser visto. Em feriados prolongados, o trânsito é intenso. O Aroeira32 está a apenas 2,5 km do Capivari, cerca de 6 minutos de carro ou 30 de caminhada. 
-Para as crianças de todas as idades
-Teleférico: está instalado a uma altitude de 1.800 metros, atingindo uma velocidade de movimentação máxima de 4 metros por segundo. A viagem dura três minutos. A vista é uma das mais lindas da cidade, de cima do Morro do Elefante. Site: https://parquecapivari.com.br/
-Maria Fumaça: O trajeto vai da Estação Emílio Ribas no Capivari até a Vila Abernéssia, percorrendo aproximadamente 4 km. Site: https://www.emcamposdojordao.com.br/pontos-turisticos/passeio-de-maria-fumaca-estrada-de-ferro-campos-do-jordao/
-Casa do Papai Noel na Montanha: casa decorada, quarto, sala, cozinha, banheiro do duende, banheiro do Papai Noel, escritório do Papai Noel e mini Polo Norte. Entretanto, não tem a presença do Papai Noel somente a visitação na casa. Site: https://www.papainoelnamontanha.com.br/
-Parque Tarundu: possui mais de 25 tipos diferentes de esportes de aventura. Site: https://tarundu.com.br/
-
-</body>
-											</html>
+			<p>• Aquecedor a óleo em todos os ambientes </p>
+			<p>• Cafeteira Nespresso</p>
+			<p>• Espremedor elétrico de frutas</p>
+			<p>• Liquidificador</p>
+			<p>• Lareira a gás</p>
+			<p>• Um forno elétrico e outro a gás</p>
+			<p>• Máquina de secar roupa</p>
+			<p>• Micro-ondas</p>
+			<p>• TV Smart Samsung 45"</p>
+			<p>• Secador de cabelo</p>
+		</div>
+		<p>A lista completa de itens pode ser encontrada <a href="inventario_aroeira32.pdf">aqui</a>.</p>
+	</body>
+</html>
