--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -37,8 +37,9 @@
 			Campos do Jordão, SP<br/>
 			12460-000
 		</p>
+		<p>Para a localização no google maps <a href="https://goo.gl/maps/5nrWv5VZCYxewKsDA">clique aqui</a>.</p>
 		<p>
-			<b>Obs.:</b> os aplicativos de navegação (Google Maps e Waze) definem a entrada do condomínio em um local errado. Basta seguir adiante por uns 100 metros para encontrar a portaria real.
+			<b>Obs.:</b> os aplicativos de navegação (Google Maps e Waze) definem a entrada do condomínio em uma portaria secundária. A portaria principal fica uns 100 metros adiante.
 		</p>
 		<h1>Telefones Úteis</h1>
 		<p>
@@ -58,15 +59,15 @@
 			<b>Senha:</b> 32aroeira
 		</p>
 		<h1>Água potável</h1>
-		<p>O condomínio possui filtro e a água das torneiras é potável, portanto, pode-se a água da torneira da pia. Entretanto, caso não se sinta confortável, recomenda-se levar água, pois o apartamento não possui filtro.</p>
+		<p>O condomínio possui filtro e a água das torneiras é potável, portanto, pode-se beber a água da torneira da pia. Entretanto, caso não se sinta confortável, recomenda-se levar água, pois o apartamento não possui filtro.</p>
 		<h1>Água quente é limitada</h1>
-		<p>Os banheiros contam com duchas de água quente proveniente de um boiler de 200 litros. Normalmente é suficiente para 4 pessoas tomarem banho de tempo moderado. Se a água acabar será necessário esperar cerca de 30 minutos para se aquecer novamente.</p>
+		<p>Os banheiros contam com duchas de água quente proveniente de um boiler de 200 litros. Normalmente é suficiente para 4 pessoas tomarem banho de tempo moderado. Se a água acabar será necessário esperar cerca de 30 minutos para aquecer novamente.</p>
 		<p>
 			<b>Cuidado:</b> a água quente é realmente muito quente. Abra somente um pouco e regule com a água fria antes de entrar debaixo da ducha.
 		</p>
-		<h1>Eletricidade xxxx</h1>
+		<h1>Eletricidade</h1>
 		<p>Todas as tomadas são de 110 V.</p>
-		<p>Há duas tomadas de 20 amperes: uma no banheiro da suíte que possui varanda e outra ao lado da geladeira (da cafeteira).</p>
+		<p>Há duas tomadas de 20 amperes: uma no banheiro da suíte que possui varanda e outra ao lado da geladeira (tomada da cafeteira).</p>
 		<p>Caso seja necessário, há uma extensão elétrica na gaveta da cristaleira.</p>
 		<h1>Como usar a máquina de café Nespresso</h1>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">usando a máquina de café Nespresso</a>
