--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -113,7 +113,7 @@
 		<p>É centro turístico de Campos do Jordão. Possui muitas lojas, restaurantes e vida noturna. Ótimo lugar para ver e ser visto. Em feriados prolongados, o trânsito é intenso. O Aroeira32 está a apenas 2,5 km do Capivari, cerca de 6 minutos de carro ou 30 de caminhada.</p>
 		<h1>Para as crianças de todas as idades</h1>
 		<p>
-			<b>Teleférico:</b> está instalado a uma altitude de 1.800 metros, atingindo uma velocidade de movimentação máxima de 4 metros por segundo. A viagem dura três minutos. A vista é uma das mais lindas da cidade, de cima do Morro do Elefante. <a href="https://parquecapivari.com.br/">Clique aqui para acessar o site</a>.</p>
+			<b>Teleférico:</b> está instalado a uma altitude de 1.800 metros. A viagem dura três minutos. A vista é uma das mais lindas da cidade, de cima do Morro do Elefante. <a href="https://parquecapivari.com.br/">Clique aqui para acessar o site</a>.</p>
 		<p>
 			<b>Maria Fumaça:</b> O trajeto vai da Estação Emílio Ribas no Capivari até a Vila Abernéssia, percorrendo aproximadamente 4 km. <a href="https://www.emcamposdojordao.com.br/pontos-turisticos/passeio-de-maria-fumaca-estrada-de-ferro-campos-do-jordao">Clique aqui para acessar o site</a>.</p>
 		<p>
@@ -123,7 +123,7 @@
 			<b>Parque Tarundu:</b> possui mais de 25 tipos diferentes de esportes de aventura. <a href="https://tarundu.com.br/">Clique aqui para acessar o site</a>.</p>
 		<h1>Parques</h1>
 		<p>
-			<b>Parque Amantikir:</b> Possui mais de 700 espécies de plantas ao longo dos 60.000m², abertos à visitação durante todos os dias do ano. <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.</p>
+			<b>Parque Amantikir:</b> Possui mais de 700 espécies de plantas ao longo dos 60.000 m², abertos à visitação durante todos os dias do ano. <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.</p>
 		<p>
 			<b>Parque Estadual Campos do Jorão</b>Aqui os visitantes além de toda natureza exuberante podem desfrutar de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades de ecoturismo. <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.</p>
 	</body>
