--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -69,7 +69,7 @@
 			<b>ART BBQ:</b> com decoração texana e especializado em carnes defumadas este restaurante possui show ao vivo aos finais de semana. <a href="https://www.artbbq.com.br/">Clique aqui para acessar o site</a>.</p>
 		-->
 		<p>
-			<b>Restaurante Dona Chicha:</b> localizado no Horto Florestal, você terá a chance de contemplar a exuberante natureza do local degustando pratos típicos da culinária regional. <a href="https://www.restaurantedonachica.com.br/">Clique aqui para acessar o site</a>.</p>
+			<b>Restaurante Dona Chica:</b> localizado no Horto Florestal, você terá a chance de contemplar a exuberante natureza do local degustando pratos típicos da culinária regional. <a href="https://www.restaurantedonachica.com.br/">Clique aqui para acessar o site</a>.</p>
 		<p>
 			<b>Bonanza Grill:</b> Localizado a uma altitude de 1.633m, um dos pontos mais altos da Serra, a vista panorâmica do Bonanza Grill é um atrativo a parte. Vale a pena um drink durante o pôr do sol. <a href="https://www.bonanzagrill.com.br/">Clique aqui para acessar o site</a>.</p>
 		<h1>Alta Gastronomia</h1>
@@ -123,8 +123,8 @@
 			<b>Parque Tarundu:</b> possui mais de 25 tipos diferentes de esportes de aventura. <a href="https://tarundu.com.br/">Clique aqui para acessar o site</a>.</p>
 		<h1>Parques</h1>
 		<p>
-			<b>Parque Amantikir:</b> Possui mais de 700 espécies de plantas ao longo dos 60.000 m², abertos à visitação durante todos os dias do ano. <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.</p>
+			<b>Parque Amantikir:</b> possui mais de 700 espécies de plantas ao longo dos 60.000 m², abertos à visitação durante todos os dias do ano. <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.</p>
 		<p>
-			<b>Parque Estadual Campos do Jorão</b>Aqui os visitantes além de toda natureza exuberante podem desfrutar de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades de ecoturismo. <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.</p>
+			<b>Parque Estadual Campos do Jordão: </b>aqui os visitantes além de toda natureza exuberante podem desfrutar de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades de ecoturismo. <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.</p>
 	</body>
 </html>
