--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -103,8 +103,7 @@
 			<b>Chocolate Montanhês:</b> possui uma loja no Capivari. <a href="https://chocolatemontanhes.com.br/">Clique aqui para acessar o site</a>.</p>
 		<h1>Passeios Culturais</h1>
 		<p>
-			<b>Palácio Boa Vista:</b> é a residência oficial de inverno do governador do Estado de São Paulo. O palácio contém uma rica coleção de obras de arte, móveis antigos e objetos históricos. Passeio imperdível com visita guiada e entrada gratuita. <a href="https://www.saopaulo.sp.gov.br/palacioboavista/#/home">Clique aqui para acessar o site</a>
-		</p>
+			<b>Palácio Boa Vista:</b> é a residência oficial de inverno do governador do Estado de São Paulo. O palácio contém uma rica coleção de obras de arte, móveis antigos e objetos históricos. Passeio imperdível com visita guiada e entrada gratuita. <a href="https://www.saopaulo.sp.gov.br/palacioboavista/#/home">Clique aqui para acessar o site</a></p>
 		<p>
 			<b>Museu Felícia Leirner e Auditório Claudio Santoro:</b> localizados em uma área de mata com 35 mil m², o museu reúne um conjunto de obras da artista Felícia Leirner, distribuídas ao ar livre, no jardim do espaço que divide com o Auditório Claudio Santoro. O auditório é uma obra-prima da arquitetura e um espaço cultural privilegiado. Ele é a sede do Festival Internacional de Inverno de Campos do Jordão. <a href="https://www.museufelicialeirner.org.br/">Clique aqui para acessar a programação</a>.</p>
 		<p>
@@ -117,14 +116,13 @@
 		<p>
 			<b>Maria Fumaça:</b> O trajeto vai da Estação Emílio Ribas no Capivari até a Vila Abernéssia, percorrendo aproximadamente 4 km. <a href="https://www.emcamposdojordao.com.br/pontos-turisticos/passeio-de-maria-fumaca-estrada-de-ferro-campos-do-jordao">Clique aqui para acessar o site</a>.</p>
 		<p>
-			<b>Casa do Papai Noel na Montanha:</b> casa decorada, quarto, sala, cozinha, banheiro do duende, banheiro do Papai Noel, escritório do Papai Noel e mini Polo Norte. Entretanto, não tem a presença do Papai Noel somente a visitação na casa. <a href="https://www.papainoelnamontanha.com.br">Clique aqui para acessar o site</a>
-		</p>
+			<b>Casa do Papai Noel na Montanha:</b> casa decorada, quarto, sala, cozinha, banheiro do duende, banheiro do Papai Noel, escritório do Papai Noel e mini Polo Norte. Entretanto, não tem a presença do Papai Noel somente a visitação na casa. <a href="https://www.papainoelnamontanha.com.br">Clique aqui para acessar o site</a>.</p>
 		<p>
 			<b>Parque Tarundu:</b> possui mais de 25 tipos diferentes de esportes de aventura. <a href="https://tarundu.com.br/">Clique aqui para acessar o site</a>.</p>
 		<h1>Parques</h1>
 		<p>
 			<b>Parque Amantikir:</b> possui mais de 700 espécies de plantas ao longo dos 60.000 m², abertos à visitação durante todos os dias do ano. <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.</p>
 		<p>
-			<b>Parque Estadual Campos do Jordão: </b>aqui os visitantes além de toda natureza exuberante podem desfrutar de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades de ecoturismo. <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.</p>
+			<b>Horto Florestal: </b>aqui os visitantes além de toda natureza exuberante podem desfrutar de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades de ecoturismo. <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.</p>
 	</body>
 </html>
