--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -33,7 +33,7 @@
 		<br clear="ALL"/>
 		<h1>Endereço</h1>
 		<p>
-			Rua José Mestres, 600 – Bloco Aroeira, 32<br/>
+			Rua José Mestres, 600, condomínio Village Embaixador, bloco Aroeira, apto 32<br/>
 			Bairro: Jardim Embaixador<br/>
 			Campos do Jordão, SP<br/>
 			12460-000
