--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -48,8 +48,10 @@
 		<b>Hospital Municipal:</b> (12) 3800-0170<br/>
 		<b>Pronto Socorro:</b> (12) 3800-0170<br/>
 	</p>
-	<h1>Orientações</h1>
+	<h1>Regras</h1>
 	<p>Não faça reparos por conta própria, mesmo que sejam pequenos. Fale imediatamente conosco que iremos resolver.</p>
+	<p>Não é permitido fazer barulho após as 22h.</p>
+	<p>Não é permitido a relização de eventos ou festas.</p>
 	<h1>Internet WI-FI</h1>
 	<p>
 		<b>Rede:</b> aroeira32<br/>
