--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -4,6 +4,7 @@
 		<meta http-equiv=Content-Type content="text/html; charset=UTF-8"/>
 		<link rel="stylesheet" href="style.css"/>
 		<link rel="icon" type="image/png" href="aroeira32_favicon.png"/>
+		<title>Aroeira32</title>
 	</head>
 	<body bgcolor="#FBE4D5" lang=PT-BR link="#0563C1" vlink="#954F72">
 		<table cellpadding=0 cellspacing=0 align=left>
