--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -36,11 +36,11 @@
 			12460-000
 		</p>
 	<p>
-		<b>Como chegar: </b>
+		<b>Como Chegar: </b>
 		a partir do portal da cidade siga em frente pela Av. Dr. Januário Miraglia e depois pela Av. 
 		Emílio Ribas (é a mesma avenida, ela apenas muda de nome) até o Capivari, quando ela 
 		muda novamente de nome e passa a se chamar Eng. Diogo José de Carvalho. Na praça Castro Alves, vire à 
-		esquerda e vá até a praça do Cavalo. Então, pegue a Av. Emílio Lang Júnior (1ª saída da rotatória) 
+		esquerda e vá até a rotatória do Cavalo. Então, pegue a Av. Emílio Lang Júnior (1ª saída da rotatória) 
 		e siga por ela por cerca de 2 km (ela mudará de nome e passará a se chamar Av. Pedro Paulo) 
 		até a avenida José Mestres. Siga em frente por mais 500 metros até a portaria do Condomínio Village Embaixador. 
 		</p>
@@ -68,21 +68,22 @@
 			<b>Rede:</b> aroeira32<br/>
 			<b>Senha:</b> 32aroeira
 		</p>
-		<h1>Água potável</h1>
-		<p>O condomínio possui filtro e a água das torneiras é potável, portanto, pode-se beber a água da torneira da pia. Entretanto, caso não se sinta confortável, recomenda-se levar água, pois o apartamento não possui filtro.</p>
-		<h1>Água quente é limitada</h1>
+		<h1>Água Filtrada</h1>
+		<p>O Aroeria32 possui um filtro de água na cozinha, portanto, não é necessário levar água.</p>
+		<h1>Água Quente é Limitada</h1>
 		<p>Os banheiros contam com duchas de água quente proveniente de um boiler de 200 litros. Normalmente é suficiente para 4 pessoas tomarem banho de tempo moderado. Se a água acabar será necessário esperar cerca de 30 minutos para aquecer novamente.</p>
 		<p>
 			<b>Cuidado:</b> a água quente é realmente muito quente. Abra somente um pouco e regule com a água fria antes de entrar debaixo da ducha.
 		</p>
 		<h1>Eletricidade</h1>
 		<p>Todas as tomadas são de 110 V.</p>
-		<p>Há duas tomadas de 20 amperes: uma no banheiro da suíte que possui varanda e outra ao lado da geladeira (tomada da cafeteira).</p>
+		<p>Há 3 tomadas de 20 amperes: uma em cada banheiro e outra ao lado da geladeira (usada pela cafeteira Nespresso).</p>
 		<p>Caso seja necessário, há uma extensão elétrica na gaveta da cristaleira.</p>
 		<h1>Como usar a máquina de café Nespresso</h1>
+		<p>Oferecemos algumas cápsulas de cortesia. Aproveite o cafezinho.</p>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">usando a máquina de café Nespresso</a>
 		</p>
-		<h1>Como acender a lareira</h1>
+		<h1>Como Acender a Lareira</h1>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/14t77gQv0y1vZkXPl-T_jBURpWGUUC1NO/view?usp=sharing">acendendo a lareira</a>
 		</p>
 		<p>
@@ -99,7 +100,7 @@
 			<b>Obs 1:</b> para desligar faça o contrário.</p>
 		<p>
 			<b>Obs 2:</b> caso acabe o gás, entre em contato com o porteiro ou a arrumadeira para solicitar a troca.</p>
-		<h1>Como usar a Alexa</h1>
+		<h1>Como Usar a Alexa</h1>
 		<p>Basta colocar o plug na tomada e dizer "Alexa" para ativá-la. Você pode pedir músicas, notícias, previsões do tempo e muito mais. Ou pergunte: "Alexa, o que você pode fazer?". O anel de luz ficará azul quando Alexa estiver pronta para ajudar. Por exemplo:</p>
 		<div id="recuo">
 			<p>
