--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -61,7 +61,7 @@
 		<h1>Regras</h1>
 		<p>Não faça reparos por conta própria, mesmo que sejam pequenos. Fale imediatamente conosco que iremos resolver.</p>
 		<p>Não é permitido fazer barulho após as 22h.</p>
-		<p>Não é permitido a relização de eventos ou festas.</p>
+		<p>Não é permitido a realização de eventos ou festas.</p>
 		<p>Papel higiênico pode ser jogado no vaso sanitário, mas somente o papel higiênico e nada mais. Para o restante, há uma lixeira disponível.</p>
 		<h1>Internet WI-FI</h1>
 		<p>
@@ -81,23 +81,23 @@
 		<p>Caso seja necessário, há uma extensão elétrica na gaveta da cristaleira.</p>
 		<h1>Como usar a máquina de café Nespresso</h1>
 		<p>Oferecemos algumas cápsulas de cortesia. Aproveite o cafezinho.</p>
-		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">usando a máquina de café Nespresso</a>
+		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">como usar a máquina de café Nespresso</a>
 		</p>
 		<h1>Como Acender a Lareira</h1>
-		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/14t77gQv0y1vZkXPl-T_jBURpWGUUC1NO/view?usp=sharing">acendendo a lareira</a>
+		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/14t77gQv0y1vZkXPl-T_jBURpWGUUC1NO/view?usp=sharing">como acender a lareira</a>
 		</p>
 		<p>
 			<b>Resumo do vídeo:</b>
 		</p>
 		<div id="recuo">
 			<p>
-			1) Abra a válvula de gás. O botijão fica dentro do armário da varanda. Gire a válvula em sentido anti-horário;<br/>
+			1) Abra a válvula de gás (deve ficar paralela à mangueira de gás). O botijão fica dentro do armário da varanda;<br/>
 			2) Coloque o plug da lareira na tomada;<br/>
 			3) Ligue o botão da lareira.<br/>
 			</p>
 		</div>
 		<p>
-			<b>Obs 1:</b> para desligar faça o contrário.</p>
+			<b>Obs 1:</b> para desligar faça tudo o contrário.</p>
 		<p>
 			<b>Obs 2:</b> caso acabe o gás, entre em contato com o porteiro ou a arrumadeira para solicitar a troca.</p>
 		<h1>Como Usar a Alexa</h1>
@@ -116,17 +116,18 @@
 		<p>Os principais eletrodomésticos são:</p>
 		<div id="recuo">
 			<p>
-			• Alexa (Inteligência Artificial da Amazon)<br/>
 			• Aquecedor a óleo em todos os ambientes<br/>
+			• Lareira a gás<br/>
+			• TV Smart Samsung 45"<br/>
+			• Secador de cabelo<br/>		
+			• Alexa (Inteligência Artificial da Amazon)<br/>
 			• Cafeteira<br/>
+			• Filtro de água<br/>
 			• Espremedor elétrico de laranja<br/>
 			• Liquidificador<br/>
-			• Lareira a gás<br/>
 			• Um forno elétrico e outro a gás<br/>
 			• Máquina de secar roupa<br/>
 			• Micro-ondas<br/>
-			• TV Smart Samsung 45"<br/>
-			• Secador de cabelo<br/>
 			</div>
 			<p>A lista completa pode ser encontrada <a href="inventario_aroeira32.pdf">aqui</a>.</p>
 		</body>
