--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -10,19 +10,19 @@
 		<table cellpadding=0 cellspacing=0 align=left>
 		<tr>
 			<td>
-				<a style="text-decoration:none" ; href="https://airbnb.com/h/aroeira32">
+				<a style="text-decoration:none" ; href="https://www.instagram.com/aroeira32/">
 					<img width=239 height=259 src="aroeira32_arvore.png" align=left hspace=12/>
 				</a>
 			</td>
 			<td>
-				<a style="text-decoration:none" ; href="https://airbnb.com/h/aroeira32">
+				<a style="text-decoration:none" ; href="https://www.instagram.com/aroeira32/">
 					<span class="logo1">A</span>
 					<span class="logo2">roeira</span>
 					<span class="logo3">32</span>
 				</a>
 				<br/>
 				<span class="logo_link">
-					<a href="https://airbnb.com/h/aroeira32">https://airbnb.com/h/aroeira32</a>
+					<a href="https://www.instagram.com/aroeira32/">https://www.instagram.com/aroeira32/</a>
 				</span>
 			</td>
 		</tr>
