--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -59,10 +59,15 @@
 			<b>Pronto Socorro:</b> (12) 3800-0170<br/>
 		</p>
 		<h1>Regras</h1>
-		<p>Não faça reparos por conta própria, mesmo que sejam pequenos. Fale imediatamente conosco que iremos resolver.</p>
-		<p>Não é permitido fazer barulho após as 22h.</p>
-		<p>Não é permitido a realização de eventos ou festas.</p>
-		<p>Papel higiênico pode ser jogado no vaso sanitário, mas somente o papel higiênico e nada mais. Para o restante, há uma lixeira disponível.</p>
+		<ul>
+		<li>Não faça reparos por conta própria, mesmo que sejam pequenos. Fale imediatamente conosco que iremos resolver.</li>
+		<li>Não é permitido fumar.</li>
+		<li>Não é permitido pets.</li>
+		<li>Não é permitido fazer barulho após as 22h e antes das 6h.</li>
+		<li>Não é permitido a realização de eventos ou festas.</li>
+		<li>Papel higiênico pode ser jogado no vaso sanitário, mas somente o papel higiênico e nada mais. Para o restante, há uma lixeira disponível.</li>
+		</ul>
+		
 		<h1>Internet WI-FI</h1>
 		<p>
 			<b>Rede:</b> aroeira32<br/>
@@ -83,7 +88,7 @@
 		<p>Oferecemos algumas cápsulas de cortesia. Aproveite o cafezinho.</p>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">como usar a máquina de café Nespresso</a>
 		</p>
-		<h1>Como Acender a Lareira</h1>
+		<h1>Como Acender a Lareira a Gás</h1>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/14t77gQv0y1vZkXPl-T_jBURpWGUUC1NO/view?usp=sharing">como acender a lareira</a>
 		</p>
 		<p>
