--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -67,12 +67,15 @@
 		<li>Não é permitido a realização de eventos ou festas.</li>
 		<li>Papel higiênico pode ser jogado no vaso sanitário, mas somente o papel higiênico e nada mais. Para o restante, há uma lixeira disponível.</li>
 		</ul>
-		
 		<h1>Internet WI-FI</h1>
 		<p>
 			<b>Rede:</b> aroeira32<br/>
 			<b>Senha:</b> 32aroeira
 		</p>
+		
+		<h1>Roupa de Cama</h1>
+		<p> Para seu conforto disponibilizamos toalhas de banho, lençóis, edredons, cobertores, mantas e aquecedores em todos os ambientes.<p>		
+		
 		<h1>Água Filtrada</h1>
 		<p>O Aroeria32 possui um filtro de água na cozinha, portanto, não é necessário levar água.</p>
 		<h1>Água Quente é Limitada</h1>
@@ -117,6 +120,7 @@
 		<h1>Vinhos</h1>
 		<p>Temos uma pequena adega no Aroeira32. Fique à vontade caso deseje experimentar algum deles. O preço está na etiqueta e você poderá pagar via pix para a chave de e-mail <b>aroeira32campos@gmail.com</b>
 		</p>
+
 		<h1>Eletrodomésticos</h1>
 		<p>Os principais eletrodomésticos são:</p>
 		<div id="recuo">
@@ -135,5 +139,9 @@
 			• Micro-ondas<br/>
 			</div>
 			<p>A lista completa pode ser encontrada <a href="inventario_aroeira32.pdf">aqui</a>.</p>
+			
+		<h1>Dicas de Campos do Jordão</h1>
+		<p>Adoramos a cidade e temos alguns lugares e restaurantes que sempre gostamos de ir. <a href="https://nlpvtzz.github.io/aroeira32/dicas_campos.htm">Clique aqui para as sugestões.</a></p>
+		
 		</body>
 	</html>
