--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -88,7 +88,7 @@
 		<p>Há 3 tomadas de 20 amperes: uma em cada banheiro e outra ao lado da geladeira (usada pela cafeteira Nespresso).</p>
 		<p>Caso seja necessário, há uma extensão elétrica na gaveta da cristaleira.</p>
 		<h1>Como usar a máquina de café Nespresso</h1>
-		<p>Oferecemos algumas cápsulas de cortesia. Aproveite o cafezinho.</p>
+		<p>Oferecemos algumas cápsulas de cortesia.</p>
 		<p>Veja o vídeo: <a href="https://drive.google.com/file/d/1NXzuYnMRscYgfhBAz2Frh5opPKoRng4N/view?usp=sharing">como usar a máquina de café Nespresso</a>
 		</p>
 		<h1>Como Acender a Lareira a Gás</h1>
@@ -105,9 +105,15 @@
 			</p>
 		</div>
 		<p>
-			<b>Obs 1:</b> para desligar faça tudo o contrário.</p>
+			<b>Obs. 1:</b> Para desligar faça tudo o contrário.</p>
 		<p>
-			<b>Obs 2:</b> caso acabe o gás, entre em contato com o porteiro ou a arrumadeira para solicitar a troca.</p>
+			<b>Obs. 2:</b> Não durma com a lareira ligada. Por precaução, não a deixe sem supervisão.</p>
+		<p>
+			<b>Obs. 3:</b> Não saia de casa com a lareira ligada. Por precaução, não a deixe sem supervisão.</p>
+		<p>
+			<b>Obs. 4:</b> Nunca deixe crianças sem supervisão com a lareira ligada.</p>			
+		<p>
+			<b>Obs. 5:</b> Caso acabe o gás, entre em contato com o zelador ou a arrumadeira para solicitar a troca.</p>
 		<h1>Como Usar a Alexa</h1>
 		<p>Basta colocar o plug na tomada e dizer "Alexa" para ativá-la. Você pode pedir músicas, notícias, previsões do tempo e muito mais. Ou pergunte: "Alexa, o que você pode fazer?". O anel de luz ficará azul quando Alexa estiver pronta para ajudar. Por exemplo:</p>
 		<div id="recuo">
