--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -98,10 +98,11 @@
 			<b>Resumo do vídeo:</b>
 		</p>
 		<div id="recuo">
-			<p>
-			1) Abra a válvula de gás (deve ficar paralela à mangueira de gás). O botijão fica dentro do armário da varanda;<br/>
-			2) Coloque o plug da lareira na tomada;<br/>
-			3) Ligue o botão da lareira.<br/>
+			<ol>
+			<li>Abra a válvula de gás (deve ficar paralela à mangueira de gás). O botijão fica dentro do armário da varanda;</li>
+			<li>Coloque o plug da lareira na tomada;</li>
+			<li>Ligue o botão da lareira.</li>
+			</ol>
 			</p>
 		</div>
 		<p>
