--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -182,13 +182,15 @@
     <p>
         <b>Mosteiro São João:</b> localizado em uma linda propriedade, este mosteiro pertence à ordem
         beneditina, conhecida pela vida monástica centrada na oração, leitura espiritual e trabalho comunitário.
-        A missa com canto gregoriano ou vésperas com canto gregoriano acontecem quase todos os dias.
+        A missa ou vésperas com canto gregoriano acontecem quase todos os dias.
         <a href="http://mosteirosaojoao.org.br/">Clique aqui para acessar o site e os horários</a>.
     </p>
     </p>
     <p>
         <b>Palácio Boa Vista:</b> é a residência oficial de inverno do governador do Estado de São Paulo.
-        O palácio contém uma rica coleção de obras de arte, móveis antigos e objetos históricos. Passeio imperdível com visita guiada e entrada gratuita. <a href="https://www.saopaulo.sp.gov.br/palacioboavista/#/home">Clique aqui para acessar o site</a>
+        O palácio contém uma rica coleção de obras de arte, móveis e objetos históricos. 
+        Passeio imperdível com visita guiada e entrada gratuita. 
+        <a href="https://www.saopaulo.sp.gov.br/palacioboavista/#/home">Clique aqui para acessar o site</a>
     </p>
     <p>
         <b>Museu Felícia Leirner e Auditório Claudio Santoro:</b> localizados em uma área de mata com 35 mil m²,
