--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -205,8 +205,8 @@
 
     <h1>Para as crianças de todas as idades</h1>
     <p>
-        <b>Teleférico:</b> está instalado a uma altitude de 1.800 metros. A viagem dura três minutos.
-        A vista é uma das mais lindas da cidade, de cima do Morro do Elefante.
+        <b>Teleférico:</b> está instalado a uma altitude de 1.800 metros no morro do Elefante. 
+        A viagem dura três minutos. A vista é uma das mais lindas da cidade.
         <a href="https://parquecapivari.com.br/">Clique aqui para acessar o site</a>.
     </p>
     <p>
