--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -188,8 +188,8 @@
     </p>
     <p>
         <b>Palácio Boa Vista:</b> é a residência oficial de inverno do governador do Estado de São Paulo.
-        O palácio contém uma rica coleção de obras de arte, móveis e objetos históricos. 
-        Passeio imperdível com visita guiada e entrada gratuita. 
+        O palácio contém uma rica coleção de obras de arte, móveis e objetos históricos.
+        Passeio imperdível com visita guiada e entrada gratuita.
         <a href="https://www.saopaulo.sp.gov.br/palacioboavista/#/home">Clique aqui para acessar o site</a>
     </p>
     <p>
@@ -205,7 +205,7 @@
 
     <h1>Para as crianças de todas as idades</h1>
     <p>
-        <b>Teleférico:</b> está instalado a uma altitude de 1.800 metros no morro do Elefante. 
+        <b>Teleférico:</b> está instalado a uma altitude de 1.800 metros no morro do Elefante.
         A viagem dura três minutos. A vista é uma das mais lindas da cidade.
         <a href="https://parquecapivari.com.br/">Clique aqui para acessar o site</a>.
     </p>
@@ -221,19 +221,19 @@
         <a href="https://www.papainoelnamontanha.com.br">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Parque Tarundu:</b> possui mais de 25 tipos diferentes de esportes de aventura.
+        <b>Parque Tarundu:</b> especializado em esporte de aventura com várias modalidades.
         <a href="https://tarundu.com.br/">Clique aqui para acessar o site</a>.
     </p>
 
     <h1>Parques</h1>
     <p>
-        <b>Parque Amantikir:</b> possui mais de 700 espécies de plantas ao longo dos 60.000 m², abertos à
+        <b>Parque Amantikir:</b> possui mais de 700 espécies de plantas ao longo dos 60.000 m². Está aberto à
         visitação durante todos os dias do ano.
         <a href="https://parqueamantikir.com.br/conheca/">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Horto Florestal: </b>aqui os visitantes além de toda natureza exuberante podem desfrutar
-        de um espaço rico em história, cultura, gastronomia e também podem praticar diversas atividades
+        <b>Horto Florestal: </b>aqui os visitantes, além de toda natureza exuberante, podem desfrutar
+        de um espaço rico em história, cultura, gastronomia e praticar diversas atividades
         de ecoturismo.
         <a href="https://ingressos.parquecamposdojordao.com.br/">Clique aqui para acessar o site</a>.
     </p>
@@ -241,16 +241,14 @@
 
     <h1>Supermercados</h1>
     <p>
-        <b>Supercampos:</b> pequeno supermercado que fica entre o Capivari e o Aroeira32.
-        É o mais próximo e possui o básico. Está localizado na Av. Emílio Lang Júnior, 1245 - Recanto Feliz,
+        <b>Supercampos:</b> é o mais próximo do Aroeira32. Localizado na Av. Emílio Lang Júnior, 1245 - Recanto Feliz,
         Campos do Jordão - SP, 12460-000.
     </p>
     <p>
-        <b>Pão de Açucar:</b> um dos maiores de Campos. Fica na Av. Dr. Januário Miraglia, 1772,
-        bairro Abernéssia. Ótimo para vinhos e café da manhã.
+        <b>Pão de Açucar:</b> fica na Av. Dr. Januário Miraglia, 1772, bairro Abernéssia.
     </p>
     <p>
-        <b>Roma:</b> fica na mesma avenida do Pão de Açucar, um pouco mais próximo do Capivari.
+        <b>Roma:</b> Av. Dr. Januário Miraglia, 2784.
     </p>
 
 
