--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -66,13 +66,13 @@
         <a href="https://www.festivaldellapasta.com.br/">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Choperia Baden Baden:</b> Ótimo local para um tira-gosto sem compromisso durante o dia.
+        <b>Choperia Baden Baden:</b> ótimo local para um tira-gosto sem compromisso durante o dia.
         Experimente as famosas salsichas alemãs (ou joelho de porco) e observe as pessoas indo e vindo.
         <a href="https://www.instagram.com/badenbadenchoperia/">Clique aqui para acessar o instagram</a>.
     </p>
     <p>
         <b>Esquina do Djalma:</b>
-        Oferece um ambiente animado e descontraído, ótimo para quem aprecia música ao vivo e gastronomia variada
+        oferece um ambiente animado e descontraído, ótimo para quem aprecia música ao vivo e gastronomia variada
         que vai desde sanduíches e tira-gostos até refeições completas.
         <a href="https://esquinadodjalma.com.br/">Clique aqui para acessar o site</a>.
     </p>
@@ -89,7 +89,7 @@
         <a href="https://grandehotelsenac.com.br/ghj_gastronomia/arte-da-pizza/">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Café Terraço Restaurante e Pizzaria:</b> localizada fora da cidade às margens de um lago esta é
+        <b>Café Terraço Restaurante e Pizzaria:</b> localizado fora da cidade às margens de um lago esta é
         uma das melhores pizzarias de Campos do Jordão. <a href="https://www.instagram.com/cafeterracocamposdojordao/">Clique aqui para acessar o instagram</a>.
     </p>
     <p>
@@ -103,7 +103,7 @@
         <a href="https://www.restaurantedonachica.com.br/">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Bonanza Grill:</b> Localizado a uma altitude de 1.633m, um dos pontos mais altos da Serra,
+        <b>Bonanza Grill:</b> localizado a uma altitude de 1.633m, um dos pontos mais altos da Serra,
         a vista panorâmica do Bonanza Grill é um atrativo à parte. Vale a pena um drink durante o pôr do sol.
         <a href="https://www.bonanzagrill.com.br/">Clique aqui para acessar o site</a>.
     </p>
@@ -210,7 +210,7 @@
         <a href="https://parquecapivari.com.br/">Clique aqui para acessar o site</a>.
     </p>
     <p>
-        <b>Maria Fumaça:</b> O trajeto vai da Estação Emílio Ribas no Capivari até a Vila Abernéssia,
+        <b>Maria Fumaça:</b> o trajeto vai da Estação Emílio Ribas no Capivari até a Vila Abernéssia,
         percorrendo aproximadamente 4 km.
         <a href="https://www.emcamposdojordao.com.br/pontos-turisticos/passeio-de-maria-fumaca-estrada-de-ferro-campos-do-jordao">Clique aqui para acessar o site</a>.
     </p>
@@ -241,8 +241,7 @@
 
     <h1>Supermercados</h1>
     <p>
-        <b>Supercampos:</b> é o mais próximo do Aroeira32. Localizado na Av. Emílio Lang Júnior, 1245 - Recanto Feliz,
-        Campos do Jordão - SP, 12460-000.
+        <b>Supercampos:</b> é o mais próximo do Aroeira32. Localizado na Av. Emílio Lang Júnior, 1245.
     </p>
     <p>
         <b>Pão de Açucar:</b> fica na Av. Dr. Januário Miraglia, 1772, bairro Abernéssia.
