--- a/dicas_campos.htm
+++ b/dicas_campos.htm
@@ -34,10 +34,10 @@
         <a href="https://www.guiacampos.com/de-labirinto-gigante-a-picnic-cervejeiro-5-experiencias-para-fazer-com-sua-mae-em-campos-do-jordao/">Cinco experiências incríveis para fazer em Campos do Jordão, de labirinto gigante a picnic cervejeiro</a>
     </p>
     <p>
-        <a href="https://www.guiacampos.com/o-que-fazer-em-campos-do-jordao-a-noite-5-dicas-e-mais-uma-extra/">O que fazer em Campos do Jordão à noite!</a>
+        <a href="https://www.guiacampos.com/o-que-fazer-em-campos-do-jordao-a-noite-5-dicas-e-mais-uma-extra/">O que fazer em Campos do Jordão à noite</a>
     </p>
     <p>
-        <a href="https://www.guiacampos.com/">Guia completo pode ser encontrado aqui</a>.
+        <a href="https://www.guiacampos.com/">Guia completo pode ser encontrado aqui</a>
     </p>
 
     <h1>Capivari</h1>
