--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="aroeira32_favicon.png">
     <title>Aroeira32</title>
 </head>
-<body bgcolor="#D3CAb7" link="#0563C1" vlink="#954F72">
+<body bgcolor="#D3CAB7" link="#0563C1" vlink="#954F72">
     <table cellpadding="0" cellspacing="0" align="left">
         <tr>
             <td>
