--- a/dicas_aroeira32.htm
+++ b/dicas_aroeira32.htm
@@ -78,7 +78,7 @@
     <div id="recuo">
         <ul>
             <li>Alexa (Inteligência Artificial da Amazon) que adora tocar suas músicas preferidas</li>
-            <li>Aquecedor a óleo em todos os ambientes</li>
+            <li>Aquecedor em todos ambientes (óleo)</li>
             <li>TV Smart Samsung 45" com canais por assinatura</li>
             <li>Secador de cabelo</li>
             <li>Duas cafeteiras: uma expresso e outra de coador</li>
@@ -121,6 +121,9 @@
     <p><b>Obs. 4:</b> Não durma com a lareira acesa. Por precaução, não a deixe sem supervisão.</p>
     <p><b>Obs. 5:</b> Não saia de casa com a lareira acesa. Por precaução, não a deixe sem supervisão.</p>
 
+    <h1>Segurança</h1>
+	<p>Há no apartamento sensores de fumaça e de CO2.</p>
+	
     <h1>Como Usar a Alexa</h1>
     <p>Basta colocar o plug na tomada, esperar o led azul acender, e dizer "Alexa" para ativá-la. Você pode pedir músicas, notícias, previsões do tempo e muito mais. Ou pergunte: "Alexa, o que você pode fazer?". O anel de luz ficará azul quando Alexa estiver pronta para ajudar. Por exemplo:</p>
     <div id="recuo">
